# hami-vnpu-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/hook/: Cargo.toml
crates/hook/src/: hook.rs  lib.rs  signal_compat.rs
crates/limiter/: Cargo.toml  build.rs
crates/limiter/proto/: limiter.proto
crates/limiter/src/: config.rs  externed_api.rs  lib.rs  main.rs  manager.rs  memory_report.rs  reporter.rs  shmem.rs  worker.rs
crates/limiter/src/shmem/: futex.rs  mod.rs  setup.rs
docs/: limiter-debug-analysis.md
script/cchen/: clean.sh  launch_hami1.sh  launch_hami2.sh
script/mab/: clean_up.sh  interactive_test.py  multi_process_test.py  run_hami_mab.sh  run_hami_mab_multi.sh  run_vllm_interactive.sh
test/: build.sh  matmul_loop.py  resnet50.py  test_memory_loop.c
