[package]
name = "limiter"
version.workspace = true
edition.workspace = true

[dependencies]
lazy_static = { workspace = true }
libc = { workspace = true }
shared_memory = "0.12"
log = "0.4"         
env_logger = "0.11" 
ctor = "0.2"
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tower = "0.5"

[build-dependencies]
tonic-build = "0.12"
